Instalacion del Controlador de Dominio y DNS con Zona Inversa

--- a/windows/dc4cu.ini
+++ b/windows/dc4cu.ini
@@ -1,8 +1,6 @@
 User=Administrator
-Password=Dark_Stone
-DomainName=dc1.pruebas.net
-NetBiosName=pruebas.net
-InstallDns=yes
-CreateDNSDelegation=yes
+DomainName=pruebas.net
+NetBiosName=pruebas
 SafeModeAdministratorPassword=Dark_Stone
+subnet=192.168.35.0/24
 Forwarders=192.168.35.1
